--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,8 @@
     <ng-template #center>
         <p-iconfield>
             <p-inputicon styleClass="pi pi-search" />
-            <input type="text" [pAutoFocus]="true"  [formControl]="searchControl" [(ngModel)]="searchText" pInputText placeholder="Search..." />
+            <input type="text" [pAutoFocus]="true" [formControl]="searchControl" [(ngModel)]="searchText" pInputText
+                placeholder="Search..." />
         </p-iconfield>
     </ng-template>
     <ng-template #end>
@@ -16,14 +17,18 @@
 </p-toolbar>
 
 <div class="grid" id="movies">
-    <div class="md:col-4 m-t15" *ngFor="let movie of movies">
+    <div class="md:col-3 m-t20" *ngFor="let movie of movies">
         <p-card>
             <ng-template #header>
-                <p-image class="w-full w-100" width="100%" height="350px"
-                    [src]="movie.poster_path?pathImg + movie.poster_path : noImg"
-                    alt="{{ movie.title }}" [preview]="true" [style]="{ width:'100%'}" />
+                <p-image class="w-full" width="100%" height="200px"
+                    [src]="movie.poster_path?pathImg + movie.poster_path : noImg" alt="{{ movie.title }}"
+                    [preview]="true" [style]="{ width:'100%'}" />
             </ng-template>
-            <ng-template #title>{{ movie.title }} </ng-template>
+            <ng-template #title>
+                <span [title]="movie.title" class="one-line-ellipsis">
+                    {{ movie.title }}
+                </span>
+            </ng-template>
             <ng-template #subtitle>
                 <p-scrollpanel [style]="{ width: '100%', height: '100px' }">
                     <p>
@@ -32,15 +37,22 @@
                 </p-scrollpanel>
             </ng-template>
             <ng-template #footer>
-                   <p-knob  [size]="60" valueTemplate="{{movie.vote_average}} ★" [(ngModel)]="movie.vote_average" [min]="0" [max]="10" readonly="true" />
+                <p-knob [size]="60" valueTemplate="{{movie.vote_average}} ★" [(ngModel)]="movie.vote_average" [min]="0"
+                    [max]="10" readonly="true" />
             </ng-template>
         </p-card>
     </div>
-  <div class="col-12 noData" *ngIf="movies.length == 0">
-    <h3 class="textNoData">No movie available ! </h3>
-  </div>
-</div> 
+    <!-- loading search  -->
+    <div class="col-12 noData" *ngIf="isSearch">
+        <p-progress-spinner ariaLabel="loading" />
+    </div>
+    <!-- no data   -->
+    <div class="col-12 noData" *ngIf="movies.length == 0 && !isSearch">
+        <h3 class="textNoData">No movie available ! </h3>
+    </div>
+</div>
 
+<!-- paginator -->
 <p-paginator *ngIf="totalRecords > 0" (onPageChange)="onPageChange($event)" [rows]="20" [totalRecords]="totalRecords" />
 
 <p-scrolltop threshold="10" icon="pi pi-arrow-up" />
